[package]
name = "query_cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version="0.6.20", features = ["headers", "macros"]}
axum-extra = { version="0.8.0" }
tokio = {version="1.12.0", features = ["full"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10.1"
log = "0.4.20"
redis = { version = "0.24.0", features = ["tokio-rustls-comp"] }
sha2 = "0.10"
mongodb = "2.8.0"
futures = "0.3"
hex = "0.4.3"
chrono = {version = "0.4.31", features = ["serde"]}
async-trait = "0.1.75"

[dev-dependencies]
redis-test = "0.3.0"
